# invoice-ui

./: .gitignore  README.md  app.yaml  index.html  package.json  pyproject.toml  run.sh  rxconfig.py  sync.ps1  sync.sh
assets/: fragment-handler.js  hash-router-handler.js  styles.css  vaadin_grid.min.js
invoice_ui/: __init__.py  app.py  layout.py
invoice_ui/components/: __init__.py  invoice_card.py  invoice_results.py
invoice_ui/data/: __init__.py  demo_invoices.py
invoice_ui/models/: __init__.py  invoice.py
invoice_ui/services/: __init__.py  base.py  demo.py
src/: App.tsx  index.css
src/components/: invoice-card.tsx  invoice-results.tsx  invoice-search.tsx
src/data/: mock-invoices.ts
src/invoice_ui/: __init__.py  app.py  layout.py  state.py  utils.py  ws_server.py
src/invoice_ui/components/: __init__.py  genie_table.py  infinite_scroll.py  intersection_observer.py  invoice_card.py  invoice_card_rx.py  invoice_results.py  invoice_search.py  results.py  search_panel.py
src/invoice_ui/components/vaadin_grid/: package-info.json  package.json  webpack.config.js
src/invoice_ui/components/vaadin_grid/src/lib/: index.js
src/invoice_ui/components/vaadin_grid/src/lib/components/: VaadinGrid.react.js
src/invoice_ui/components/vaadin_grid/vaadin_grid/: __init__.py
src/invoice_ui/data/: __init__.py  demo_invoices.py
src/invoice_ui/lib/: __init__.py  caches.py  clients.py  genie.py  logs.py  objects.py  paths.py
src/invoice_ui/models/: __init__.py  common.py  invoice.py  reflex_models.py
src/invoice_ui/services/: __init__.py  invoice_service.py  invoice_service_demo.py  invoice_service_impl.py
src/invoice_ui/utils/: __init__.py  invoice_helpers.py
src/types/: invoice.ts
