[project]
name = "invoice-ui"
version = "0.1.0"
description = "Search through hardware invoices."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=2.17",
    "dash-iconify>=0.1.2",
    "databricks-connect==17.2.*",
   "reggie-tools @ git+https://github.com/reggie-db/reggie-bricks-py.git@main#subdirectory=reggie-tools"
]

[project.scripts]
invoice_ui = "invoice_ui.app:main"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]