[project]
name = "invoice-ui"
version = "0.2.0"
description = "Search through hardware invoices."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "reflex>=0.6.0",
    "reggie-tools @ git+https://github.com/reggie-db/reggie-bricks-py.git@main#subdirectory=reggie-tools",
    "reggie-concurio @ git+https://github.com/reggie-db/reggie-bricks-py.git@main#subdirectory=reggie-concurio",
    "python-benedict",
]

[project.scripts]
invoice_ui = "invoice_ui.app:main"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]
