[project]
name = "invoice-ui"
version = "0.1.0"
description = "Search through hardware invoices."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=2.17",
    "dash-ag-grid>=31.0.0",
    "dash-extensions>=1.0.0",
    "dash-iconify>=0.1.2",
    "flask-sock>=0.7.0",
    "python-benedict",
    "diskcache>=5.6.0",
    "databricks-connect>=17.3,<18.0",
]

[project.scripts]
invoice_ui = "invoice_ui.app:main"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]